syntax = "proto3";

import "common.proto";

message Request {
    oneof data {
        GetRequest get = 1;
        InsertRequest insert = 2;
        DeleteRequest delete = 3;
        GetManyRequest get_many = 4;
        BatchRequest batch = 5;
    }
    string table = 6;
}


message GetRequest {
    string hash_key = 1;
    Value sort_key = 2;
}

message InsertRequest {
    string hash_key = 1;
    Value sort_key = 2;
    map<string, Value> values = 3;
}

message DeleteRequest {
    string hash_key = 1;
    Value sort_key = 2;
}

message GetManyRequest {
    repeated GetRequest items = 1;
}


message BatchRequest {
    repeated BatchItem items = 1;
}

message BatchItem {
    oneof item {
        InsertRequest insert = 1;
        DeleteRequest delete = 2;
    }
}